<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".ui.fragment.global.GlobalFragment">

    <TextView
        android:id="@+id/text_view_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_home_continent_case"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_2" />

    <SearchView
        android:id="@+id/search"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:background="@drawable/searchview_border"
        android:queryHint="Search Continent Name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_2" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search">

        <ImageButton
            android:id="@+id/ib_sort_asc"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/imagebutton_border"
            android:contentDescription="@string/cd_ascending_sort"
            android:src="@drawable/ic_ascending" />

        <ImageButton
            android:id="@+id/ib_sort_desc"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/ib_sort_asc"
            android:background="@drawable/imagebutton_border"
            android:contentDescription="@string/cd_descending_sort"
            android:src="@drawable/ic_descending" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_continent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        tools:listitem="@layout/item_continent" />

    <ImageButton
        android:id="@+id/ib_to_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_shape_backtop"
        android:contentDescription="@string/cd_go_to_top"
        android:padding="20dp"
        android:src="@drawable/ic_backtop_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>